# behavioral-baseline-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
baseline_engine/: baseline.py  cli.py  config.py  demo_data.py  explain.py  ingest.py  models.py  reporting.py  scoring.py  storage_sqlite.py
data/: report.md  score.csv  train.csv
tests/: test_baseline.py  test_cli_flow.py  test_cli_inspect.py  test_demo_data.py  test_explain.py  test_report.py  test_scoring.py  test_smoke.py  test_storage_sqlite.py
