[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baseline-engine"
version = "0.1.0"
description = "Behavioral Baseline Engine (baseline-first deviation scoring)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
baseline = "baseline_engine.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["baseline_engine*"]
exclude = ["data*", "tests*"]
